keycloak-19-postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak3
  labels:
    app: keycloak3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak3
  template:
    metadata:
      labels:
        app: keycloak3
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
