keycloak-19-postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak3
  labels:
    app: keycloak3
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak3
  type: LoadBalancer
